container-native-load-balancing/app/deployment/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apigee-hello-neg-ingress
spec:
  backend:
    serviceName: apigee-hello-app-neg-svc # Name of the Service targeted by the Ingress
    servicePort: 80 # Should match the port used by the Service
